# hermesmq

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.e2e.yml  docker-compose.yml
.cargo/: config.toml
crates/hermesmq/: Cargo.toml
crates/hermesmq-core/: Cargo.toml
crates/hermesmq-core/src/: client.rs  config.rs  error.rs  frame.rs  http.rs  lib.rs  queue.rs  raft.rs  storage.rs  types.rs
crates/hermesmq-core/src/engine/: log_store.rs  mod.rs  network.rs  state_machine.rs
crates/hermesmq-core/tests/: client_protocol.rs  cluster.rs  durability.rs  e2e_docker.rs  http.rs  restart_conformance.rs  slow_disk.rs  store_conformance.rs
crates/hermesmq-core/tests/perf/: chart.rs  main.rs
crates/hermesmq-proto/: Cargo.toml  build.rs
crates/hermesmq-proto/proto/: hermesmq.proto
crates/hermesmq-proto/src/: lib.rs
crates/hermesmq/src/: lib.rs
crates/hermesmqd/: Cargo.toml
crates/hermesmqd/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: request_decode.rs  response_decode.rs
supply-chain/: config.toml
