[workspace]
resolver = "2"
members = ["crates/hermesmq", "crates/hermesmq-core", "crates/hermesmq-proto", "crates/hermesmqd"]

[workspace.package]
version = "0.6.2"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Tadas Talaikis <info@nordlet.com>"]
repository = "https://github.com/hyperiondb/hermesmq"
readme = "README.md"
keywords = ["message-queue", "message-broker", "messaging", "raft", "pubsub"]
categories = ["asynchronous", "database-implementations", "network-programming"]
homepage="https://hyperiondb.eu/"

[workspace.dependencies]
bytes = { version = "=1.11.1", features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tokio = { version = "=1.52.3", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal", "io-util"] }
thiserror = "=2.0.18"
anyhow = "=1.0.102"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
openraft = { version = "=0.9.24", features = ["serde", "storage-v2"] }
redb = "=2.6.3"
clap = { version = "=4.6.1", features = ["derive", "env"] }
postcard = { version = "=1.1.3", features = ["use-std"] }
prost = "=0.13.5"
prost-build = "=0.13.5"
protox = "=0.7.2"

[profile.release]
lto = true
strip = "symbols"
