[package]
name = "hermesmq-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core engine for hermesmq: queue state machine and Raft application types"

[dependencies]
hermesmq-proto = { path = "../hermesmq-proto", version = "=0.1.1" }
serde.workspace = true
serde_json.workspace = true
openraft.workspace = true
redb.workspace = true
postcard.workspace = true
prost.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
prost.workspace = true
proptest = "=1.11.0"
