[package]
name = "hermesmq-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Protobuf wire types for hermesmq, shared by the server and clients"

[dependencies]
prost.workspace = true

[build-dependencies]
prost-build.workspace = true
protox.workspace = true
